--- a/configuration.yaml
+++ b/configuration.yaml
@@ -21,7 +21,7 @@ custom_updater:
   card_urls:
     - https://raw.githubusercontent.com/kalkih/mini-media-player/master/tracker.json
     - https://raw.githubusercontent.com/kalkih/mini-graph-card/master/tracker.json
-    - https://raw.githubusercontent.com/ljmerza/calendar-card/master/custom_updater.json
+    - https://raw.githubusercontent.com/rdehuyss/homeassistant-lovelace-google-calendar-card/master/custom_updater.json
     
 alexa_media:
   accounts:
@@ -40,6 +40,8 @@ history:
 ios:
 
 logger:
+
+stream:
 
 homekit:
   filter:
