--- a/groups.yaml
+++ b/groups.yaml
@@ -102,3 +102,20 @@ pi_hole:
     - sensor.pi_hole_ads_blocked_today
     - sensor.pi_hole_ads_percentage_today
     - sensor.pi_hole_dns_queries_today
+    
+system_monitor:
+  name: Syste Monitor
+  entities:
+    - sensor.disk_use_percent
+    - sensor.disk_use
+    - sensor.dick_free
+    - sensor.memory_use
+    - sensor.memory_free
+    - sensor.processor_use
+    - sensor.last_boot
+    - sensor.network_in
+    - sensor.network_out
+    - sensor.ipv4_address
+    - sensor.load_1m
+    - sensor.load_5m
+    - sensor.load_15m
