Theming Hassio & calendar-card | layout-card implementation

--- a/ui_floorplan.yaml
+++ b/ui_floorplan.yaml
@@ -1,26 +1,26 @@
 resources:
   - type: js
-    url: /local/custom-cards/plan-coordinates.js?v=2
-  - type: module
-    url: /local/custom-cards/mini-media-player-bundle.js?v=1.0.3
+    url: /local/custom-cards/calendar-card.js?track=true
   - type: module
     url: /local/custom-cards/mini-graph-card-bundle.js?v=0.3.2
   - type: module
-    url: /local/custom-cards/radial-menu.js
+    url: /local/custom-cards/mini-media-player-bundle.js?v=1.0.3
   - type: js
-    url: /local/custom-cards/calendar-card.js?track=true
+    url: /local/custom-cards/plan-coordinates.js?v=2
+  - type: module
+    url: /local/custom-cards/radial-menu.js
+  - type: module
+    url: /customcards/github/custom-cards/tracker-card.js?track=true
+  - type: module
+    url: /customcards/github/nervetattoo/simple-thermostat.js?track=true
+  - type: module
+    url: /customcards/github/maykar/compact-custom-header.js?track=true
   - type: js
     url: /customcards/github/thomasloven/card-tools.js?track=true
   - type: js
     url: /customcards/github/thomasloven/layout-card.js?track=true
   - type: js
     url: /customcards/github/thomasloven/popup-card.js?track=true
-  - type: js
-    url: /customcards/github/thomasloven/layout-card.js?track=true
-  - type: module
-    url: /customcards/github/maykar/compact-custom-header.js?track=true
-  - type: module
-    url: /customcards/github/custom-cards/tracker-card.js?track=true
 title: Mike's Apartment
 views:
   - cards:
@@ -34,6 +34,7 @@ views:
               - calendar.killshot_burgundy
               - calendar.michaeldvinci_gmail_com
               - calendar.miro
+              - calendar.people
               - calendar.potential_trips
               - calendar.pre_order
               - calendar.things_to_remember
@@ -41,12 +42,14 @@ views:
             numberOfDays: 2
             progressBar: true
             showMultiDay: true
+            startFromToday: true
             timeFormat: 'hh:mm a'
             title: false
             type: 'custom:calendar-card'
           - elements:
               - entity: lock.august_smart_lock_pro
                 style:
+                  color: '#44739e'
                   left: 8%
                   top: 86%
                 type: state-icon
@@ -86,6 +89,7 @@ views:
                 type: state-label
               - entity: light.entrance_2
                 style:
+                  color: '#44739e'
                   left: 14%
                   top: 86%
                 type: state-icon
@@ -102,6 +106,7 @@ views:
                 type: state-icon
               - entity: light.dining_2
                 style:
+                  color: '#44739e'
                   left: 45.5%
                   top: 84.5%
                 type: state-icon
@@ -276,16 +281,19 @@ views:
                 type: icon
               - entity: light.bed_right_2
                 style:
+                  color: '#44739e'
                   left: 89.5%
                   top: 10.5%
                 type: state-icon
               - entity: light.bed_left_2
                 style:
+                  color: '#44739e'
                   left: 67.5%
                   top: 10.5%
                 type: state-icon
               - entity: light.bed_left_2
                 style:
+                  color: '#44739e'
                   left: 77%
                   top: 31%
                 type: state-icon
@@ -331,7 +339,7 @@ views:
                 options: show
                 type: 'custom:compact-custom-header'
                 voice: show
-            image: /local/floorplan7.png
+            image: /local/floorplan_grey2.png
             panel: true
             type: picture-elements
         column_num: 2
@@ -460,12 +468,6 @@ views:
         voice: show
       - cards:
           - type: 'custom:tracker-card'
-          - entities:
-              - entity: sensor.pi_hole_ads_blocked_today
-              - entity: sensor.pi_hole_ads_percentage_blocked_today
-              - entity: sensor.pi_hole_dns_queries_today
-            title: Pi-Hole
-            type: entities
         type: vertical-stack
       - cards:
           - camera_image: camera.rtsp_1
@@ -504,24 +506,13 @@ views:
         type: vertical-stack
       - cards:
           - entities:
-              - calendar.bills
-              - calendar.events
-              - calendar.gwu
-              - calendar.gym_time
-              - calendar.http_followshows_com_ical_9oejn9ol
-              - calendar.killshot_burgundy
-              - calendar.michaeldvinci_gmail_com
-              - calendar.miro
-              - calendar.potential_trips
-              - calendar.pre_order
-              - calendar.things_to_remember
-              - calendar.work_solers
-            progressBar: true
-            showMultiDay: true
-            timeFormat: 'hh:mm a'
-            type: 'custom:calendar-card'
+              - entity: sensor.pi_hole_ads_blocked_today
+              - entity: sensor.pi_hole_ads_percentage_blocked_today
+              - entity: sensor.pi_hole_dns_queries_today
+            title: Pi-Hole
+            type: entities
         type: vertical-stack
-    icon: 'mdi:calendar-multiselect'
+    icon: 'mdi:raspberry-pi'
     title: Other
   - badges: []
     cards:
