--- a/ui_floorplan.yaml
+++ b/ui_floorplan.yaml
@@ -249,7 +249,7 @@ views:
                 type: icon
               - entity: sensor.bathroom_motion_all
                 style:
-                  color: black
+                  color: '#44739e'
                   left: 48.5%
                   top: 27.5%
                 type: state-icon
@@ -345,8 +345,8 @@ views:
         column_num: 2
         layout: horizontal
         max_width:
-          - 30%
-          - 70%
+          - 27%
+          - 73%
         type: 'custom:layout-card'
     icon: 'mdi:home-assistant'
     id: floorplan
