--- a/ui_floorplan.yaml
+++ b/ui_floorplan.yaml
@@ -313,7 +313,7 @@ views:
                   left: 73%
                   top: 47%
                 type: icon
-              - entity: media_player.michael_s_fire_tv
+              - entity: media_player.fire_stick_4k
                 icon: 'mdi:amazon'
                 style:
                   color: '#44739e'
