--- a/automations.yaml
+++ b/automations.yaml
@@ -1,1 +1,38 @@
-[]
+## Notify of High Disk Use - credit to @sauloonzem thank you
+  - alias: Disk Use Alarm
+    initial_state: 'on'
+    trigger:
+      platform: numeric_state
+      entity_id: sensor.disk_use
+      above: 12
+    action:
+    - service: notify.ios_mikes_iphone_xs
+      data:
+        title: 'HA Server'
+        message: 'Warning - HA Server Disk Use is {{states.sensor.disk_use.state}}GB'
+          
+## Notify of High CPU Usage - credit to @sauloonzem thank you
+  - alias: CPU Use Alarm
+    initial_state: 'on'
+    trigger:
+      platform: numeric_state
+      entity_id: sensor.processor_use
+      above: 85
+    action:
+    - service: notify.ios_mikes_iphone_xs
+      data:
+        title: 'HA Server'
+        message: 'Warning - HA Server Processor {{states.sensor.processor_use.state}}%'
+          
+## Notify if CPU Temperature is High - credit to @sauloonzem thank you
+  - alias: CPU Temp Alarm
+    initial_state: 'on'
+    trigger:
+      platform: numeric_state
+      entity_id: sensor.cpu_temperature
+      above: 185
+    action:
+    - service: notify.ios_mikes_iphone_xs
+      data:
+        title: 'HA Server'
+        message: 'Warning - HA Server CPU Temp is {{states.sensor.cpu_temperature.state}}c'
