--- a/sensor.yaml
+++ b/sensor.yaml
@@ -96,4 +96,8 @@
         {% elif states.binary_sensor.litter_box_2_contact_2.state == 'off' %}
           mdi:cat
         {% endif %}
-      
+- platform: command_line
+  name: CPU Temperature
+  command: "cat /sys/class/thermal/thermal_zone0/temp"
+  unit_of_measurement: "°C"
+  value_template: '{{ value | multiply(0.001) | round(1) }}'
