--- a/ui_lovelace.yaml
+++ b/ui_lovelace.yaml
@@ -187,16 +187,16 @@ views:
                 type: icon
               - entity: binary_sensor.fridge_contact
                 state_image:
-                  'off': /local/fridge_closed2.png
-                  'on': /local/fridge_open2.png
+                  'off': /local/Lovelace/fridge_closed2.png
+                  'on': /local/Lovelace/fridge_open2.png
                 style:
                   left: 24%
                   top: 44.5%
                 type: image
               - entity: binary_sensor.freezer_contact
                 state_image:
-                  'off': /local/freezer_closed2.png
-                  'on': /local/freezer_open2.png
+                  'off': /local/Lovelace/freezer_closed2.png
+                  'on': /local/Lovelace/freezer_open2.png
                 style:
                   left: 24%
                   top: 44.5%
@@ -346,7 +346,7 @@ views:
                       user_agent: OS X
                     config:
                       hide_tabs: '1'
-            image: /local/floorplan_grey2.png
+            image: /local/Lovelace/floorplan_grey2.png
             panel: true
             type: picture-elements
         column_num: 2
