--- a/groups.yaml
+++ b/groups.yaml
@@ -41,9 +41,9 @@ amplifi:
 bathroom_lights:
   name: Bathroom Lights
   entities:
-    - light.bathroom_center
-    - light.bathroom_left
-    - light.bathroom_right
+    - light.bathroom_1
+    - light.bathroom_2
+    - light.bathroom_2
 
 bathroom_motion:
   name: Bathroom Motion Sensor
